Include YAML line number and attribute path in CasC errors